docs/style.css
:root {
  --white-solid: #eeeeee;
  --grey-solid: #828282;
  --grey-solid_5: rgba(160, 159, 159, 0.144);
  --black_transparent: rgba(0, 0, 0, 0.726);
  --normal-scrolbar-clr: #1ed75f18;
  --active-scrolbar-clr: #1ed75f38;
  --grey-solid_10: rgba(160, 159, 159, 0.247);
  --primary-color: #1ed760;
  --primary-color-dark: #1dbb54;
  --primary-color-dark-alt-2: hsl(144, 82%, 38%);
  --primary-color-dark-alt: hsl(143, 63%, 10%);
  --solid-green: #22cc5db2;
  --solid-blue: hsl(225, 77%, 33%);
  --solid-blue-alt: hsl(223, 78%, 12%);
  --solid-dark: #0c0b0b;
  --solid-dark-alt: #161313;
  --solid-darker: #000;
  --sand-solid: #ecebe8;
  --window-actions-elevation: 2;
  color: white;
  font-size: 16px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

* {
  box-sizing: border-box;
}

*::after,
*::before {
  box-sizing: inherit;
}

*::selection {
  background-color: var(--solid-green);
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
}

body,
section.product-display {
  background-color: var(--solid-dark);
}

.icon-x2 {
  font-size: 2em;
}

.icon-x3 {
  font-size: 2.3em;
}

.dev-name {
  color: var(--solid-blue);
}

.padded-less {
  padding: 8px;
}

.padded-less-horizontal {
  padding-inline: 8px;
}

.scale-0 {
  transform: scale(0, 0);
  opacity: 0;
}

.scale-1 {
  transform: scale(1, 1);
  opacity: 1;
}

#top-button {
  text-decoration: none;
  color: white;
  width: 36px;
  height: 36px;
  position: sticky;
  bottom: 16px;
  left: 16px;
  background-color: var(--solid-green);
  border-radius: 50%;
  border: none;
  padding: 8px 16px;
  cursor: pointer;
  z-index: 1000;
  transition: 0.5s;
  outline: none;
}

nav {
  /* Safari */
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

ul.topnav {
  font-size: 0.8em;
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  background-color: var(--solid-darker);
  padding: 16px 8px 16px 16px;
  border-bottom: 1px solid var(--grey-solid_10);
}

/* Hide the link that should open and close the topnav on small screens */
ul.topnav .icon {
  border: 1px solid var(--primary-color);
  display: none;
  transform: scaleX(1.2);
  margin-right: 8px;
}

ul.topnav > .logo {
  display: flex;
  float: left;
  max-width: 50px;
  pointer-events: none;
}

ul.topnav > .logo p {
  margin-left: 24px;
  letter-spacing: 0.5em;
  font-weight: bold;
}

ul.topnav li {
  position: relative;
  float: right;
}

ul.topnav li a {
  display: block;
  color: white;
  text-align: center;
  text-transform: uppercase;
  padding: 14px 16px;
  text-decoration: none;
}

ul.topnav li a:hover:not(.active) {
  color: var(--primary-color);
}

ul.topnav li a.active {
  color: var(--primary-color);
}

ul.topnav li.right {
  float: right;
}

section {
  border-bottom: 1px solid var(--grey-solid_10);
  padding: 50px;
}

section.product-display {
  width: 100%;
  height: calc(100px + 65vh);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

section.product-display .s-app-name {
  font-size: 2em;
  text-align: center;
  letter-spacing: 0.5em;
}

section.product-display .app-name {
  text-align: center;
  letter-spacing: 0.2em;
}

section.product-display > .event {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

section.product-display > .event > *,
section.product-display > a.download {
  font-family: "Courier New", Courier, monospace;
  margin: 16px;
  border-radius: 8px;
  padding: 1em 3em;
  border: 1px solid var(--solid-green);
}

section.product-display > a.download {
  text-decoration: none;
  color: white;
  transition: 0.2s;
  padding: 1em;
  margin-top: 30px;
}

section.product-display > a.download > i {
  margin-inline: 16px;
}

section.product-display > a.download:hover {
  background-color: var(--solid-green);
}

section.info {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: var(--solid-darker);
}

section.info > .info-cards {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  padding: 50px;
  gap: 2em;
  overflow: hidden;
}

section.info > .info-cards > * {
  width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

section.info > .info-cards .info-icon {
  background-color: var(--solid-blue);
  width: 100px;
  height: 100px;
  color: white;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  box-shadow: 0px 0px 16px 4px rgba(48, 48, 214, 0.473);
}

section.info > .info-cards p {
  text-align: center;
}

section.epilogue {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* justify-content: center; */
  /* background-color: var(--solid-darker); */
}

section.epilogue > * {
  max-width: 1080px;
  text-align: center;
}

section.epilogue > .heading {
  /* justify-self: flex-start;   */
  font-size: 2em;
}

section.form {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: var(--solid-darker);
}

form.contact-form {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  align-items: center;
}

.form-group {
  width: 70%;
  display: flex;
  flex-direction: column;
  gap: 2em;
  /* padding: 50px; */
}

form.contact-form .name {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 2em;
}

form.contact-form .name > * {
  flex: 1;
}

.form-control {
  display: inline-block;
  width: 100%;
  min-height: 25px;
  padding: 5px 10px;
  font-size: 1em;
  line-height: 1.6;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  outline: none;
  padding: 16px;
}

.form-control:focus {
  border-color: #6db3fd;
  box-shadow: 3px 3px 0 #6db3fd, -3px -3px 0 #6db3fd, -3px 3px 0 #6db3fd, 3px -3px 0 #6db3fd;
}

textarea.form-control {
  min-height: 100px;
  max-height: 500px;
  resize: vertical;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

button[type="submit"] {
  width: 200px;
  height: 50px;
  border: none;
  padding: 8px 24px;
  color: white;
  background-color: var(--solid-green);
  cursor: pointer;
}

button[type="submit"]:hover {
  opacity: 0.8;
}

button[type="submit"]:active {
  opacity: 1;
}

footer {
  text-align: center;
  font-size: 1em;
  color: #eeeeee93;
  padding: 20px;
}

i.fa-heart {
  color: hotpink;
}

/* Mobile phone-like screen sizes */

@media screen and (max-width: 600px) {
  ul.topnav li:not(:last-child) {
    display: none;
  }

  ul.topnav li.icon {
    float: right;
    display: block;
  }

  ul.topnav.responsive {
    position: relative;
  }

  ul.topnav.responsive li.icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  ul.topnav.responsive li {
    float: none;
    display: block;
    text-align: left;
  }

  section {
    padding: 20px;
  }

  .form-group {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  form.contact-form .name > * {
    flex: none;
  }

  textarea.form-control {
    max-height: 300px;
  }
}

/* Tablet-like screen sizes */

@media screen and (max-width: 996px) {
  ul.topnav > .logo {
    overflow: hidden;
  }

  .form-group {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  form.contact-form .name > * {
    flex: none;
  }
}

